--- a/tutoring_pt.html
+++ b/tutoring_pt.html
@@ -1,53 +1,60 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-PT">
 <head>
-  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Aulas de Química — Gustavo P. Maia</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Em preparação — Gustavo P. Maia</title>
+  <meta name="description" content="Este website encontra-se atualmente em preparação.">
   <link rel="stylesheet" href="style.css">
-  <meta name="description" content="Aulas de apoio em Química — recursos, planos e contacto para aulas particulares.">
+  <style>
+    body {
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: linear-gradient(135deg, #f7f7fb, #ececf4);
+    }
+    .prep-container {
+      max-width: 640px;
+      padding: 48px;
+      text-align: center;
+      background: white;
+      border-radius: 16px;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.08);
+    }
+    .prep-container h1 {
+      margin-top: 0;
+      font-size: 2.2rem;
+      letter-spacing: 0.02em;
+    }
+    .prep-container p {
+      margin-top: 16px;
+      font-size: 1.05rem;
+      color: #555;
+      line-height: 1.6;
+    }
+    .signature {
+      margin-top: 32px;
+      font-size: 0.9rem;
+      color: #777;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <header class="header">
-      <a class="brand" href="#"><div class="logo">GM</div><div><div style="font-weight:700">Aulas de Química</div><div style="color:var(--muted);font-size:12px">Com Gustavo P. Maia</div></div></a>
-      <nav class="nav">
-        <a href="#services" class="active">Serviços</a>
-        <a href="#programs">Programas</a>
-        <a href="#contact">Contacto</a>
-      </nav>
-    </header>
-
-    <main>
-      <div class="card">
-        <h1 style="margin-top:0">Aulas particulares de Química</h1>
-        <p style="color:var(--muted)">
-          Ofereço aulas de apoio em química para ensino secundário, preparação para acesso ao ensino superior e introdução à química universitária. As sessões podem ser presenciais (região indicada no CV) ou online. As aulas focam compreensão, resolução de problemas e preparação para exames.
-        </p>
-
-        <h3 id="services">Serviços</h3>
-        <p style="color:var(--muted)">
-          Sessões individuais, sessões em pequenos grupos, preparação para exames nacionais, orientação de laboratórios práticos e apoio em trabalhos/esclarecimentos de conteúdos de química orgânica, inorgânica e físico-química.
-        </p>
-
-        <h3 id="programs">Exemplos de planos</h3>
-        <p style="color:var(--muted)">
-          Um plano típico para um curso intensivo de 8 semanas inclui revisão teórica guiada, resolução semanal de problemas selecionados, mini testes e uma sessão final de simulação de exame. Planos personalizados mediante avaliação inicial.
-        </p>
-
-        <h3 id="contact">Contacto e agendamento</h3>
-        <p style="color:var(--muted)">
-          Email: gustavopinho.maia@mnhn.fr. Para marcar uma aula ou pedir um orçamento, envie um email indicando nível de ensino, objetivos e disponibilidade. As aulas são cobradas por sessão; descontos disponíveis para pacotes. 
-        </p>
-
-        <div style="margin-top:12px">
-          <a class="btn" href="mailto:gustavopinho.maia@mnhn.fr">Enviar email</a>
-          <a class="btn" href="index_pt.html" style="background:#6b46c1;margin-left:8px">Voltar ao CV</a>
-        </div>
-      </div>
-    </main>
-
-    <footer class="footer card">Página de apoio e promoção das aulas. Informação de contacto retirada do CV público. :contentReference[oaicite:35]{index=35}</footer>
+  <div class="prep-container">
+    <h1>Em preparação</h1>
+    <p>
+      Este espaço encontra-se atualmente em desenvolvimento.  
+      Os conteúdos estão a ser cuidadosamente preparados para oferecer
+      informação clara, rigorosa e atualizada.
+    </p>
+    <p>
+      Em breve, este website estará disponível com detalhes sobre aulas,
+      programas e formas de contacto.
+    </p>
+    <div class="signature">
+      — Gustavo P. Maia
+    </div>
   </div>
 </body>
 </html>
-
